# Face-Recognition-Raspberry-Pi-64-bits

./: CMakeLists.txt  FaceRecognition.cbp  README.md
include/: TFace.h  TRetina.h
src/: main.cpp
